src/styles/prime-custom.scss
/* ... */
// Buttons Related
.p-button {
    background: palette(black, 10);
    border: 1px solid palette(black, 10);
    height: $button-height;
    font-size: $button-font-size;

    &.p-button-outlined {
        &:enabled {
            border-radius: 8px;
            border: $element-border-20;
            background-color: palette(black, 10);

            &:hover {
                background-color: palette(blue, 20);
                border: 1px solid palette(blue, 20);
            }
            &:hover:active,
            &:active {
                background-color: $element-background-color-20;
                border: $element-border-20;
            }

            &:focus {
                box-shadow: none;
            }
            .p-button-label {
                color: palette(black, 80);
            }
        }

        &:disabled {
            background-color: palette(black, 0);
            border: 1px solid palette(black, 10);
            opacity: 1;

            svg,
            .p-button-label {
                color: $element-background-color-20;
                fill: $element-background-color-20;
            }
        }

        svg {
            width: 16px;
            height: 16px;
            margin: 0 4px;
        }

        &.p-button-secondary {
            &:enabled {
                background-color: palette(white, 0);
                &:hover {
                    background-color: palette(blue, 20);
                    border: 1px solid palette(blue, 20);
                }
                &:hover:active,
                &:active {
                    background-color: $element-background-color-20;
                    border: $element-border-20;
                }
            }
        }
    }

    &.p-button-text {
        &:enabled {
            border-radius: 8px;
            background-color: palette(black, 0);

            &:hover {
                background: palette(black, 5);

                svg {
                    fill: palette(black, 100);
                    color: palette(black, 100);
                }
            }

            &:hover:active,
            &:active {
                background-color: $element-background-color-20;

                svg {
                    fill: palette(black, 100);
                    color: palette(black, 100);
                }
            }

            &:focus {
                box-shadow: none;
            }

            .p-button-label {
                color: palette(black, 80);
            }
        }
        &:disabled {
            background-color: palette(black, 0);
            border: none;
            opacity: 1;

            svg,
            .p-button-label {
                color: $element-background-color-20;
                fill: $element-background-color-20;
            }
        }

        &.p-button-icon-only {
            width: 32px;
        }

        svg {
            width: 16px;
            height: 16px;
            margin: 0 4px;
            fill: palette(black, 55);
            color: palette(black, 55);
        }
    }

    &.p-toast-button-link {
        width: fit-content;
        margin-top: 8px;

        .p-button-label {
            font-size: 13px;
            font-weight: bold;
            color: #1c90cc;
        }
    }

    &.p-toast-left-button {
        @include padding(0, 0, 0, 0);
        @include margin(2, 8, 0, 0);

        .p-button-label {
            font-size: 13px;
            font-weight: bold;
            color: #1c90cc;
        }

        &:focus {
            box-shadow: none;
        }
    }

    &.p-toast-right-button {
        @include padding(0, 0, 0, 0);
        @include margin(2, 0, 0, 0);

        .p-button-label {
            font-size: 13px;
            font-weight: bold;
            color: #1c90cc;
        }

        &:focus {
            box-shadow: none;
        }
    }

    // Icons
    &.p-button-icon-only.p-button-rounded {
        height: $button-height;
        font-size: $button-font-size;
        width: 2.4rem;
        padding: 0.75rem 0;
        border-radius: 50% !important;
    }
}

// Toggle Buttons
.p-button.p-togglebutton {
    background-color: palette(white, 0);
    border: none;
    &:hover {
        background-color: palette(black, 5) !important;
    }
    &:hover:active {
        background-color: $element-background-color-20;
    }
    &:active {
        background-color: palette(black, 10) !important;
        .p-button-label {
            color: palette(black, 80);
        }
    }

    &.p-disabled {
        color: $element-background-color-20;
    }

    &.p-highlight {
        background-color: palette(black, 10);
        &:hover {
            background-color: palette(black, 5);
        }
        &:hover:active {
            background-color: $element-background-color-20;
        }
        &:active {
            background-color: palette(black, 10);
        }
        .p-button-label {
            color: palette(black, 80);
        }
    }

    &:focus {
        box-shadow: none;
    }
}

// Dialog Related
.p-dialog.p-component {
    box-shadow: 0 8px 30px 0 $element-background-color-20;
    border-radius: 8px;

    .p-dialog-header {
        border-top-left-radius: 8px;
        border-top-right-radius: 8px;
        padding: 16px 32px;
        border-bottom: $element-border-20;
        .p-dialog-title {
            font-weight: bold;
            font-size: 26px;
        }
    }

    .p-dialog-content {
        padding: 16px 32px 32px 32px;
        .p-dialog-subheader {
            min-height: 48px;
        }
    }

    .p-dialog-footer {
        border-bottom-left-radius: 8px;
        border-bottom-right-radius: 8px;
        border-top: $element-border-20;
        padding: 16px 32px;

        .p-button:not(:last-child) {
            margin: 0 16px 0 0;
            width: auto;
        }

        .p-button {
            margin: 0 0 0 0;
            width: auto;
        }
    }
}
/* ... */

